code: add question about java with option add-exports